Ensure spacing near 'Show Replies'.

--- a/css/style-wp.scss
+++ b/css/style-wp.scss
@@ -249,6 +249,8 @@ $vcard-image-size: 16px;
 			}
 
 			.incom-showhide-replies {
+				margin-top: 14px;
+
 				button {
 					display: none;
 
